design.css
.header{
    background-color:#301934;
    height:90%;
}
#banner{
    background-color:#301934;
    position:sticky;
    transition: 0.2s;
    
    margin:auto;

     /* for collapsing header */
}
#name_pic{
    height:90%;
    width:100%;
    overflow: hidden;
    margin-top: 5px; 
}
#pic{
    justify-self: center;
    align-self: center;
    width:60%;
    height:60%;
   
}
.resume{
    background-color:#301934;
}
.resume:hover{
    background-color: #702670;
}

p{
    font-family: 'Prompt', sans-serif;
}

/* education design */

.edu{
    background-color:3c3b3e3;
    border-radius:5px;
    padding: 3px;

}
.edu-one{
    border-top:5px dotted #301934;
    border-right:5px dotted #301934; 
    text-align:center;  
}
.edu-two{
    border-bottom:5px dotted #301934;
    border-right:5px dotted #301934; 
    border-bottom-left-radius: 2px;   
}   

.edu-three{
    border-top:5px dotted #301934;
    border-right:5px dotted #301934;
}

.yr{
    background-color: #301934;
    font-size:15px;
    
    
}

h4,.h {
    font-family: Ubuntu, sans-serif;
    font-size: 32px;
}

/* navbar design start */
.nav-style {
    font-family: Ubuntu, sans-serif;
    font-weight: bold;
    font-size: 15px;
    color:#301934
}

.hoveffect:hover {
    color: white;
    background-color:#702670; 
}

.hoveffect:active,
.hoveffect:focus {
    color: white;
    background-color:#702670;
    

}
.navbar a.nav-link.active {
    background-color:#702670;
    color: white !important;
}
/* navbar design end */

/* send me a message start */

.msg {
    text-align: center;
    
    margin-left: 200px;
    border-color:#301934;
    background-color:#c3b3e3;
    color:#301934;
    font-weight: bold;
    
}

.submit{
    background-color:#702670;
    transition:all 10s linear;

}
.submit_btn:hover{
    background-color:#c3b3e3;
    color:#702670;
    transition:all 10s ease-in;
}

.msg:hover {
    background-color:#702670;
    color: #fff;
    font-weight: bold;

}
.tick{
    color:white;
    text-shadow:white;
    background-color:#702670 !important;
    transition: all 0.3s ease;

}


/* end of send a msg */




/* side bar start */
.icon-bar {
    position: fixed;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    
    
    
  }
  

.icon-bar a {
    display: block;
    text-align: center;
    padding: 16px;
    transition: all 0.3s ease;
    color: white;
    font-size: 18px;
    text-shadow:#000;
    
}
.icon-bar a:hover {
    background-color:#702670;

}
/* side bar end */



.skill{
    background-color:#301934;

}

.material-symbols-outlined {
  font-variation-settings:
  'FILL' ,
  'wght' 400,
  'GRAD' 0,
  'opsz' 24;
  color:white;
  background-color: #702670;
  border-radius:50%;
  padding:2px;
  font-size:46px;

}




/* skills design ends */

